name:                elm-module-analysis
version:             0.1.0.0
homepage:            https://github.com/jhrcek/elm-module-analysis
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable elm-module-analysis
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
  default-language:    Haskell2010
